# qd

./: Cargo.toml  README.md
benches/: bench.rs
src/: entity.rs  lib.rs
src/const_fma/: mod.rs
src/const_imp/: mod.rs
src/simd/: mod.rs
