[package]
name = "qd"
version = "0.6.0"
edition = "2021"
authors = ["sarah <>"]
description = "Extended precision floating point arithmetic"
readme = "README.md"
repository = "https://github.com/sarah-ek/qd/"
license = "MIT"
keywords = ["math", "floating-point", "precision"]

[dependencies]
bytemuck = "1.22.0"
pulp = "0.21.4"

[features]
