[package]
name = "qd"
version = "0.7.0"
edition = "2021"
authors = ["sarah <>"]
description = "Extended precision floating point arithmetic"
readme = "README.md"
repository = "https://github.com/sarah-ek/qd/"
license = "MIT"
keywords = ["math", "floating-point", "precision"]

[dependencies]
bytemuck = { version = "1.22.0", default-features = false }
libm = "0.2.11"
num-traits = { version = "0.2.19", default-features = false }
pulp = { version = "0.21.4", default-features = false }

[features]
default = [
  "std",
]
std = [
  "pulp/std",
  "num-traits/std",
]
